# cardiocore

cardiocore/: README.md  pyproject.toml
cardiocore/benchmarks/: __init__.py  check_vllm.py  latency_benchmark.py
cardiocore/demo/: __init__.py  generate_demo_assets.py  run_demo.py
cardiocore/demo/assets/: README.txt
cardiocore/demo/output/: README.txt
cardiocore/docker/: Dockerfile.mcp  docker-compose.yml
cardiocore/docs/: build_in_public.md  technical_writeup.md
cardiocore/fhir/: __init__.py  bundle.py  diagnostic_report.py  ecg_observation.py  echo_observation.py  validator.py
cardiocore/inference/: __init__.py  config.py  ecg.py  ecg_pulse.py  echo.py  echo_structure.py  echonet_loader.py  gemma4_client.py  gemma_client.py  heart_score.py  registry.py
cardiocore/mcp_server/: __init__.py  error_handlers.py  main.py  sharp_context.py
cardiocore/mcp_server/tools/: __init__.py  analyze_ecg.py  analyze_structure.py  estimate_ef.py  generate_report.py  risk_stratify.py
cardiocore/prompt_opinion/: a2a_agent_config.json  marketplace_config.json
cardiocore/scripts/: health_check.sh  start_mcp_server.sh  start_specialist_server.sh  start_vllm.sh
cardiocore/specialist_server/: __init__.py  main.py
cardiocore/specialist_server/routes/: __init__.py
cardiocore/tests/: __init__.py  test_fhir.py  test_heart_score.py  test_tools.py
